--- a/app/src/main/res/layout/select_item_ticket_check.xml
+++ b/app/src/main/res/layout/select_item_ticket_check.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
@@ -27,40 +28,14 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/TrainDetails"
-            android:layout_width="8dp"
-            android:layout_height="72dp"
+            android:id="@+id/MainImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="@color/colorPassing" />
+            android:background="@drawable/ic_originating" />
 
-        <LinearLayout
-            android:layout_width="56dp"
-            android:layout_height="72dp"
-            android:layout_marginRight="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_LeftFirstLine"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="路过"
-                android:textColor="@color/colorPassing"
-                android:textSize="15dp" />
-
-            <TextView
-                android:id="@+id/tv_LeftSecondLine"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:text="A8,B8"
-                android:textColor="#757575"
-                android:textSize="14dp" />
-
-        </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -74,7 +49,7 @@
                 android:layout_marginTop="16dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="G406 昆明南-北京西"
+                android:text="G93 郑州东-广州南"
                 android:textColor="#212121"
                 android:textSize="15dp" />
 
@@ -83,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:text="20:24到-20:30发"
+                android:text="07:56开"
                 android:textColor="#757575"
                 android:textSize="14dp" />
 
@@ -102,7 +77,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="25dp"
-                android:text="1:30后检票"
+                android:text="A8,B8"
                 android:textColor="#212121"
                 android:textSize="16dp" />
         </LinearLayout>
