--- a/app/src/main/res/layout/fragment_ticketcheck_daywork.xml
+++ b/app/src/main/res/layout/fragment_ticketcheck_daywork.xml
@@ -91,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentTop="true"
-                android:id="@+id/tv_arrivingTime"
+                android:id="@+id/tv_leavingTime"
 
 
                 android:layout_marginTop="16dp"
@@ -103,8 +103,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                android:id="@+id/tv_trainType"
                 android:layout_marginBottom="20dp"
-                android:text="到达时间"
+                android:text="发车(通过)"
                 android:textColor="#fff"
 
                 android:textSize="16dp" />
