--- a/app/src/main/res/layout/select_item_train_timetable.xml
+++ b/app/src/main/res/layout/select_item_train_timetable.xml
@@ -25,6 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
+        android:id="@+id/timeTable_layout"
         android:orientation="horizontal">
 
         <ImageView
