--- a/app/src/main/res/layout/fragment_ticketcheck_daywork.xml
+++ b/app/src/main/res/layout/fragment_ticketcheck_daywork.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
-            android:text="已选检票口:A7A8,B7B8"
+            android:text="已选择的检票口:全部"
             android:textColor="#fff"
             android:textSize="14dp" />
 
@@ -48,7 +49,22 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
+        <RelativeLayout
+            android:id="@+id/ani_ticketCheck"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
+            <com.wang.avi.AVLoadingIndicatorView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+
+                app:indicatorName="BallPulseIndicator" />
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/nextTrainNum_layout"
@@ -145,5 +161,6 @@
     <ListView
         android:id="@+id/lv_ticketCheck"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="?android:attr/actionBarSize"/>
 </LinearLayout>
