--- a/app/src/main/res/layout/fragment_train_timetable.xml
+++ b/app/src/main/res/layout/fragment_train_timetable.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:background="#00000000"
-                android:text="点此定位至当前"
+                android:text="点此刷新"
                 android:textColor="#fff"
                 android:textSize="14dp" />
 
@@ -51,6 +52,23 @@
         android:layout_height="100dp"
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
+
+        <RelativeLayout
+            android:id="@+id/ani_trainTimeTable"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <com.wang.avi.AVLoadingIndicatorView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+
+                app:indicatorName="BallPulseIndicator" />
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/passingTrainCount_layout"
@@ -116,6 +134,7 @@
     <ListView
         android:id="@+id/lv_train_timetable"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="?android:attr/actionBarSize"/>
 
 </LinearLayout>
