--- a/app/src/main/res/layout/fragment_ticketcheck_daywork.xml
+++ b/app/src/main/res/layout/fragment_ticketcheck_daywork.xml
@@ -161,6 +161,6 @@
     <ListView
         android:id="@+id/lv_ticketCheck"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="?android:attr/actionBarSize"/>
+        android:layout_height="match_parent"/>
+        <!--android:layout_marginBottom="?android:attr/actionBarSize"-->
 </LinearLayout>
