--- a/app/src/main/res/layout/fragment_train_timetable.xml
+++ b/app/src/main/res/layout/fragment_train_timetable.xml
@@ -3,6 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+
+        <SearchView
+            android:id="@+id/sv_trainNumberSearch"
+            android:layout_width="match_parent"
+            android:layout_marginEnd="16dp"
+            android:layout_height="wrap_content"
+            android:iconifiedByDefault="false"
+            android:queryHint="搜索车次" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="36dp"
@@ -134,7 +149,7 @@
     <ListView
         android:id="@+id/lv_train_timetable"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="?android:attr/actionBarSize"/>
+        android:layout_height="match_parent"/>
+        <!--android:layout_marginBottom="?android:attr/actionBarSize"-->
 
 </LinearLayout>
